--- a/index.html
+++ b/index.html
@@ -6,6 +6,46 @@
 	<link rel="stylesheet" href="css/puls4.css" />
 </head>
 <body>
-hola chicos
+	<header>
+		<div class="logo">
+			<img src="imagenes/logo.png" alt="Puls4" />
+		</div>
+		<div class="titular">
+			<h1 class="titulo">
+				Puls4: Comunidad profesional de gente atractiva.
+			</h1>
+			<div>
+				<a class="filtro" href="#">
+					Responsive Design
+				</a>
+				<a class="publicar" href="#">
+					Publicar
+				</a>
+			</div>
+		</div>
+		<div class="usuario">
+			<figure class="avatar">
+				<img src="imagenes/avatar.jpg" alt="Jean Pierre" />
+			</figure>
+			<a class="flechita" href="#">
+				X
+			</a>
+		</div>
+	</header>
+	<nav>
+	</nav>
+	<section>
+	</section>
+	<footer>
+		<h3 class="powered">
+			<strong>
+				Power by Jp
+			</strong>
+			<span class="mejor">
+				WebNow.pe 2015
+			</span>
+
+		</h3>	
+	</footer>
 </body>
 </html>
